# pole

./: .env.example  .envrc  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  GAME_DEVELOPMENT_ROADMAP.md  GAME_ENGINE_VISION.md  LICENSE  Makefile  PROJECT_ZOMBOID_CLONE_ROADMAP.md  QUICKSTART.md  README.md  ROADMAP.md  TEST_ISOMETRIC.md  benchmark_parser.py  benchmark_type_checker.py  pyproject.toml  run_zomboid.sh  setup-api-key.sh  shell.nix  test_all_examples.py  test_hybrid_parser.py  test_rust_full.py  test_rust_parser.py  test_rust_type_checker.py  test_sdl_verbose.c  test_unit_call.pole-ir
.claude/: AUTO_PRIORITY.md  DECISION.md  DEVELOPMENT_CHECKLIST.md  ERROR_RECOVERY.md  PENDING_ISSUES.md  SUMMARY.md  TYPE_CHECKER_STRATEGY.md
compiler/: .gitignore  Cargo.toml  README.md
compiler/docs/: IR_TO_LLVM_MAPPING.md
compiler/examples/: all_examples_test.rs  all_native_test.rs  arena_benchmark.rs  benchmark_factorial.rs  benchmark_native.rs  conditional.rs  debug_isometric_parse.rs  debug_parse.rs  debug_parse_create_player.rs  debug_parser.rs  factorial_compiler.rs  factorial_native.rs  fibonacci_native.rs  hello_llvm.rs  is_even_native.rs  large_project_test.rs  m3_summary.rs  m4_3_summary.rs  m4_4_summary.rs  m4_summary.rs  max_native.rs  minimal_compile_test.rs  oom_test.rs  parse_zomboid.rs  simple_math_native.rs  simple_record_native.rs  test_67_40.rs  test_67_41.rs  test_67_75.rs  test_67_90.rs  test_67_incremental.rs  test_67_partial.rs  test_add_points.rs  test_camera_demo.rs  test_camera_simple.rs  test_combat.rs  test_crafting.rs  test_empty_list.rs  test_ffi_pointer.rs  test_ffi_printf.rs  (+81 more)
compiler/src/: arena.rs  ast.rs  codegen.rs  ir_parser.rs  lib.rs  memory.rs  python_bindings.rs  type_checker.rs
docs/: ARENA_ALLOCATOR_IMPACT.md  DOCUMENTATION_COMPLETION_REPORT.md  DOCUMENTATION_STRATEGY.md  DOCUMENT_REORGANIZATION_PLAN.md  M0.5_PROGRESS.md  M4_ADVANCED_TYPES_PROGRESS.md  M5_RUNTIME_FUNCTIONS.md  NEXT_STEPS.md  PHASE_5.1_COMPLETION_REPORT.md  RUST_TYPE_CHECKER_MIGRATION.md  UNIFIED_DEVELOPMENT_STRATEGY.md  WEEK1_PLAN.md
examples/: 01-factorial.pole  01-factorial.pole-ir  02-fibonacci.pole  02-fibonacci.pole-ir  03-user-validation.pole  03-user-validation.pole-ir  04-simple-math.pole  04-simple-math.pole-ir  05-is-even.pole  05-is-even.pole-ir  07-max.pole  07-max.pole-ir  08-simple-record.pole-ir  09-add-points.pole-ir  09-simple-string.pole-ir  10-string-literal.pole-ir  11-simple-list.pole-ir  12-simple-variant.pole-ir  13-variant-tags.pole-ir  14-option-type.pole-ir  15-simple-option.pole-ir  16-option-match.pole-ir  17-unit-type.pole-ir  18-string-length.pole-ir  19-ffi-printf.pole-ir  20-ffi-malloc.pole-ir  21-ffi-struct.pole-ir  22-ffi-pointer.pole-ir  23-sdl2-init.pole-ir  24-sdl2-window.pole-ir  (+56 more)
(+115 files in other folders)
