[package]
name = "pole-compiler"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Pole Project <gutmutcode@gmail.com>"]
description = "Pole language native compiler (LLVM backend)"
license = "MIT"
repository = "https://github.com/gutmutcode/pole"
keywords = ["compiler", "llvm", "programming-language"]
categories = ["compilers"]

[lib]
name = "pole_compiler"
crate-type = ["cdylib", "rlib"]  # cdylib for Python bindings, rlib for Rust

[dependencies]
# Parser combinators (for IR Parser)
nom = "7.1"

# LLVM bindings (Phase 5 M2+) - Using inkwell for type-safe LLVM API
inkwell = { version = "0.5", features = ["llvm17-0", "target-all"] }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Arena allocator (Phase 5.1.5)
bumpalo = "3.14"

[dev-dependencies]
# Testing
proptest = "1.0"
pretty_assertions = "1.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
# For LLVM build configuration
cc = "1.0"

# Benchmarks will be added later
# [[bench]]
# name = "compiler_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
